# haskell-fizzbuzz

./: .gitignore  README.md  haskell-fizzbuzz.cabal  stack.yaml
src/: Main.hs
