name:                haskell-fizzbuzz
version:             0.1.0.0
synopsis:            A solution to "FizzBuzz" in Haskell
description:         A solution to "FizzBuzz" in Haskell
homepage:            https://github.com/mattaudesse/haskell-fizzbuzz
license:             PublicDomain
license-file:        LICENSE
author:              Matt Audesse
maintainer:          matt@mattaudesse.com
copyright:           None
category:            Exercise
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
source-repository    head
    type:            git
    location:        https://github.com/mattaudesse/haskell-fizzbuzz

executable haskell-fizzbuzz
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10
  hs-source-dirs:      src
  default-language:    Haskell2010
